# PDF-Optimize

./: README.md  app.py  pyproject.toml  requirements.txt
