[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version = "2.12.0"

[project]
name = "PDF-Optimize"
version = "0.1.0"
description = "A tool to optimize PDFs"
authors = [{name = "Yusuf Calisir", email = "ysfcals@gmail.com"}]
dependencies = ["Flask==2.1.2", "pikepdf==2.12.0"]
